# ChangeLog for app-emacs/gnuserv
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 May 2007; Ulrich Mueller <ulm@gentoo.org> -gnuserv-3.12.7.ebuild,
  +gnuserv-3.12.7-r1.ebuild, +files/gnuserv-3.12.7-path-xemacs.patch:
  Binary programs moved to new package app-emacs/gnuserv-programs to avoid
  file collisions with XEmacs, bug #177936. Search for gnuserv binary also in
  XEmacs directory.

  25 May 2007; Ulrich Mueller <ulm@gentoo.org> +files/50gnuserv-gentoo.el,
  +gnuserv-3.12.7.ebuild, +metadata.xml:
  Copied from Portage tree.
