@@ -2,19 +2,19 @@ AUX 50gnuserv-gentoo.el 223 RMD160 eff8c0897d597e2b32846d04f7a4260da381ff2c SHA1
 MD5 68d9b7f77e5608fcdb6aeff8b66d61ae files/50gnuserv-gentoo.el 223
 RMD160 eff8c0897d597e2b32846d04f7a4260da381ff2c files/50gnuserv-gentoo.el 223
 SHA256 7db9aad5982c44067867572e5c6eb4f3e73aedcd722299a59953b87a9e4662ba files/50gnuserv-gentoo.el 223
-AUX gnuserv-3.12.7-path-xemacs.patch 526 RMD160 9d8065bfd70c397604515139776457ef6825ef35 SHA1 5704812794ad43231bcb1200c1df8bb5e080f9d6 SHA256 b1dfdcd138dbf86294e4c8c166db16bcaccace4f2562945c60af4ffd5ab10d6b
-MD5 9f9caeef883deca8d464d68d9a1ccf71 files/gnuserv-3.12.7-path-xemacs.patch 526
-RMD160 9d8065bfd70c397604515139776457ef6825ef35 files/gnuserv-3.12.7-path-xemacs.patch 526
-SHA256 b1dfdcd138dbf86294e4c8c166db16bcaccace4f2562945c60af4ffd5ab10d6b files/gnuserv-3.12.7-path-xemacs.patch 526
+AUX gnuserv-3.12.7-path-xemacs.patch 735 RMD160 8104722de9ccf8600069f56c82926441d101bf6e SHA1 56443e292bd09b189b4f51790137dbe187deac11 SHA256 eb712a058584f476c26fa9b3bb84a08f68278f8b1e2adbe64c98ef91ae0030be
+MD5 84b4116c4d7dd20af4e66163c409e171 files/gnuserv-3.12.7-path-xemacs.patch 735
+RMD160 8104722de9ccf8600069f56c82926441d101bf6e files/gnuserv-3.12.7-path-xemacs.patch 735
+SHA256 eb712a058584f476c26fa9b3bb84a08f68278f8b1e2adbe64c98ef91ae0030be files/gnuserv-3.12.7-path-xemacs.patch 735
 DIST gnuserv-3.12.7.tar.gz 93709 RMD160 2fd5a28fb86cc05c26da50cab8d9ee036f2e2d00 SHA1 5f5fd98b068fd1b221d32a0760c9914455e197b5 SHA256 08242167b863e41bbfdaf4429500018c2b2beb50b82791fa148df66eba433d2a
 EBUILD gnuserv-3.12.7-r1.ebuild 870 RMD160 60c5b9210fde722573323cf38766a4436df9f24d SHA1 58125d7c2bdb1c61bc24753b187e5e41d91e3be8 SHA256 e72f961b8a80d097efe0023e114b38d853835ec55d92b0ae211b8f9ed85c30b8
 MD5 349655369aa4ccfe8ceabf6650b0a54e gnuserv-3.12.7-r1.ebuild 870
 RMD160 60c5b9210fde722573323cf38766a4436df9f24d gnuserv-3.12.7-r1.ebuild 870
 SHA256 e72f961b8a80d097efe0023e114b38d853835ec55d92b0ae211b8f9ed85c30b8 gnuserv-3.12.7-r1.ebuild 870
-MISC ChangeLog 578 RMD160 4384d3524757eeb556bafdc360f30053fa42034d SHA1 b73dd52cb9369dc3336421ede3dd74f3e0778698 SHA256 c24ea47c4840fcd313823b3a7d9416242f512972702b36eb3a4dce8ea4f5a02d
-MD5 299c8332e228161d8c857944c60d8609 ChangeLog 578
-RMD160 4384d3524757eeb556bafdc360f30053fa42034d ChangeLog 578
-SHA256 c24ea47c4840fcd313823b3a7d9416242f512972702b36eb3a4dce8ea4f5a02d ChangeLog 578
+MISC ChangeLog 733 RMD160 53744bea80f2dbddd7b5f08950b88bc5464e5aca SHA1 dbb2d5ddae7b8f2673c3a2271c15819ca2b2e6ac SHA256 2fcc604fb14605e5e40995bb67f21b2266449589209fc49b269b8b3d29a6116c
+MD5 25f37350c907ab1657d6ec19e65aaec6 ChangeLog 733
+RMD160 53744bea80f2dbddd7b5f08950b88bc5464e5aca ChangeLog 733
+SHA256 2fcc604fb14605e5e40995bb67f21b2266449589209fc49b269b8b3d29a6116c ChangeLog 733
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
